--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,16 @@
+spring.profiles.include=account
+
+# redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# async thread pool
+spring.task.execution.pool.max-size=10
+spring.task.execution.pool.queue-capacity=5
+spring.task.execution.pool.keep-alive=10s
