chore: embedded mongodb 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.task.execution.pool.max-size=10
 spring.task.execution.pool.queue-capacity=5
 spring.task.execution.pool.keep-alive=10s
+
+# embedded mongo
+de.flapdoodle.mongodb.embedded.version=5.0.0
