test: Spring Data MongoDB의 type mapping에 대한 학습 테스트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.task.execution.pool.keep-alive=10s
 
 # embedded mongo
 de.flapdoodle.mongodb.embedded.version=5.0.0
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
