feat: 이메일에 대한 쿠폰 발급 내역 조회 및 재발송 (#31)
* chore: embedded mongodb 설정 (#25)

* feat: 쿠폰 값 고유 코드로 변경 (#26)

* feat: 쿠폰 값 고유한 코드로 생성

* refactor: secret key field RandomCodeGeneratorImpl로 이동

* feat: 쿠폰 발급 요청 시 쿠폰 발급 내역 저장 (#27)

* test: Spring Data MongoDB의 type mapping에 대한 학습 테스트

* refactor(CouponService): redis 통한 지급 가능 여부 검사 method 분리

* refactor: 선착순 처리 관련 객체 `FcfsIssue*`로 rename

* refactor: 선착순 처리 패키지 분리(`fcfsissue`)

* refactor: 쿠폰 생성 및 메일 발송 패키지 분리(`coupon`)

* refactor: CouponService -> FcfsIssueService rename

선착순 관리와 실제 쿠폰 발행 서비스 분리하기 위해 rename

* refactor: 선착순 관리 `FcfsIssueService`, 실제 쿠폰 발행 및 지급 `CouponService` 분리

* feat: 쿠폰 생성 후 MongoDB에 저장

- DatabaseSetUp.clean() MongoDB 초기화 로직 추가

* style: service field 재정렬

service-model-repository-support 순

* test: 통합 테스트 설정 `IntegrationTestConfig`로 분리

앞으로 통합 테스트 작성 시 해당 class를 상속받아 작성

* feat: 쿠폰 발급 이력 repository

- 쿠폰 발급 이력: {발급 대상 email, 쿠폰 발급 이력 array}
- 발급 이력 저장시 email에 해당하는 document 있으면 field array에 추가, 없으면 document 생성

* feat: 쿠폰 생성 후 쿠폰 발급 이력 저장

* feat: 이메일에 대한 쿠폰 발급 이력 조회 시 발급된 쿠폰 id, 날짜 목록과 OK 응답 (#29)

* test: Controller Test 요청 전송 로직 method로 분리

* feat: 이메일로 쿠폰 발급 이력 조회 시 발급받은 쿠폰 id, 날짜 목록과 OK 응답

* feat: 이메일로 쿠폰 발급 이력 조회 시 이력 존재하지 않으면 Not Found 응답

* feat: 쿠폰 재발송 요청 시 처음 지급한 메일로 재지급 (#30)

* refactor: 쿠폰 이력 조회 return type Optional로 변경

* refactor: 쿠폰 이력 조회 시 단일 document로 저장

* feat: 발급된 쿠폰에 대해 재전송 요청 시 같은 메일로 재전송 후 Accepted 응답

* docs: update README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.include=account
+spring.profiles.include=secrets
 
 # redis
 spring.data.redis.host=localhost
@@ -14,3 +14,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.task.execution.pool.max-size=10
 spring.task.execution.pool.queue-capacity=5
 spring.task.execution.pool.keep-alive=10s
+
+# embedded mongo
+de.flapdoodle.mongodb.embedded.version=5.0.0
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
