--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.task.execution.pool.max-size=10
 spring.task.execution.pool.queue-capacity=5
 spring.task.execution.pool.keep-alive=10s
+spring.task.execution.shutdown.await-termination=true
+spring.task.execution.shutdown.await-termination-period=10s
 
 # embedded mongo
 de.flapdoodle.mongodb.embedded.version=5.0.0
