refactor: coupon, core 모듈 분리
- coupon: 쿠폰 발급 및 발송 처리 서비스
- core: api exception 스펙 정의

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,5 @@
-spring.profiles.include=secrets
+spring.profiles.include=coupon
 
 # redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-
-# mail
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-
-# async thread pool
-spring.task.execution.pool.max-size=10
-spring.task.execution.pool.queue-capacity=5
-spring.task.execution.pool.keep-alive=10s
-spring.task.execution.shutdown.await-termination=true
-spring.task.execution.shutdown.await-termination-period=10s
-
-# embedded mongo
-de.flapdoodle.mongodb.embedded.version=5.0.0
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
