--- a/fcfs-coupon-api-fcfs/src/main/resources/application.properties
+++ b/fcfs-coupon-api-fcfs/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.include=coupon,fcfsissue
+spring.profiles.include=fcfsissue,history
 
 server.shutdown=graceful
 spring.lifecycle.timeout-per-shutdown-phase=20s
